[gd_scene load_steps=7 format=3 uid="uid://balok5b4ubm81"]

[ext_resource type="PackedScene" uid="uid://drck7dxhismcd" path="res://assets/props/alarm_light/scene.gltf" id="1_7dlye"]
[ext_resource type="Script" path="res://assets/props/alarm_light/alarm light.gd" id="2_ovdjr"]

[sub_resource type="Animation" id="Animation_pw5s8"]
resource_name = "off"
length = 4.0
loop_mode = 1

[sub_resource type="Animation" id="Animation_sermx"]
resource_name = "spin"
length = 4.0
loop_mode = 1
step = 4.0
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_model/7d1bf0332ae443b699542c9798598de2_fbx/RootNode/Bec-Alerta-Rosu/Bec-Alerta-Rosu_Lumina_0/beam1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.707, 0, 0, 0.707, 1, 1, 0.5, 0.5, -0.5, 0.5, 2, 1, 0, 0.707, -0.707, 0, 3, 1, -0.5, 0.5, -0.5, -0.5, 4, 1, -0.707, 0, 0, -0.707)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sketchfab_model/7d1bf0332ae443b699542c9798598de2_fbx/RootNode/Bec-Alerta-Rosu/Bec-Alerta-Rosu_Lumina_0/beam2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -0.707, 0, 0, 0.707, 1, 1, -0.5, -0.5, -0.5, 0.5, 2, 1, 0, 0.707, 0.707, 0, 3, 1, -0.5, 0.5, 0.5, 0.5, 4, 1, -0.707107, 0, 0, 0.707107)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_thd1u"]
_data = {
"off": SubResource("Animation_pw5s8"),
"spin": SubResource("Animation_sermx")
}

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_4t25d"]
points = PackedVector3Array(3.15194, -0.000195742, 0.227878, 3.13254, 0.194988, 0.227878, 3.131, 0.194597, 0.253169, 3.15009, -0.000195742, 0.253169, 3.131, -0.194793, 0.253169, 3.13254, -0.195184, 0.227878, 3.15194, -0.000195742, -0.481401, 3.07559, 0.382537, 0.227878, 3.13254, 0.194988, -0.481401, 3.07405, 0.38195, 0.253169, 3.06974, 0.379992, 0.282291, 3.12608, 0.193618, 0.282291, 3.14517, -0.000195742, 0.282291, 3.12608, -0.194009, 0.282291, 3.06974, -0.380384, 0.282291, 3.07405, -0.382146, 0.253169, 3.07559, -0.382733, 0.227878, 3.13254, -0.195184, -0.481401, 3.0682, -0.182459, -1.51524, 3.08605, -0.000195742, -1.51524, 3.0682, 0.182067, -1.51524, 2.98322, 0.555403, 0.227878, 2.98199, 0.554424, 0.253169, 3.07559, 0.382537, -0.481401, 3.01493, 0.357478, -1.51524, 2.97768, 0.551879, 0.282291, 2.97152, 0.547572, 0.313329, 3.06265, 0.377251, 0.313329, 3.11869, 0.192248, 0.313329, 3.13778, -0.000195742, 0.313329, 3.11869, -0.192443, 0.313329, 2.97768, -0.552075, 0.282291, 2.98199, -0.554816, 0.253169, 3.06265, -0.377447, 0.313329, 2.97152, -0.547768, 0.313329, 2.98322, -0.555599, 0.227878, 3.07559, -0.382733, -0.481401, 3.01493, -0.357674, -1.51524, 3.01185, -0.356304, -1.54896, 3.06481, -0.181676, -1.54896, 3.00908, -0.0712608, -2.29617, 3.01093, -0.0712608, -2.27625, 3.01001, 0.0638214, -2.29617, 3.01185, 0.0638214, -2.27625, 3.06481, 0.18148, -1.54896, 3.01185, 0.356108, -1.54896, 2.85884, 0.70693, 0.227878, 2.98322, 0.555403, -0.481401, 2.85761, 0.705756, 0.253169, 2.85422, 0.702428, 0.282291, 2.92842, 0.51899, -1.51524, 2.84899, 0.696946, 0.313329, 2.84221, 0.69029, 0.342451, 2.96352, 0.542287, 0.342451, 3.05373, 0.373532, 0.342451, 3.10945, 0.19029, 0.342451, 3.12823, -0.000195742, 0.342451, 3.10945, -0.190681, 0.342451, 2.84899, -0.697338, 0.313329, 2.85422, -0.702623, 0.282291, 2.85761, -0.705951, 0.253169, 2.85884, -0.707126, 0.227878, 3.05373, -0.373728, 0.342451, 2.96352, -0.542482, 0.342451, 2.98322, -0.555599, -0.481401, 2.92842, -0.519186, -1.51524, 2.92565, -0.517228, -1.54896, 2.96413, -0.0865309, -2.52034, 2.99831, -0.0867267, -2.33373, 3.00108, -0.0867267, -2.31725, 3.00662, -0.0712608, -2.31572, 3.00754, 0.0638214, -2.31572, 2.92565, 0.517032, -1.54896, 3.00231, 0.0792874, -2.31725, 2.99954, 0.0792874, -2.33373, 2.96537, 0.0794832, -2.52034, 2.70736, 0.831441, 0.227878, 2.70644, 0.83007, 0.253169, 2.85884, 0.70693, -0.481401, 2.81235, 0.660532, -1.51524, 2.70367, 0.825959, 0.282291, 2.69936, 0.819695, 0.313329, 2.69412, 0.811668, 0.342451, 2.83482, 0.68285, 0.367358, 2.9549, 0.536413, 0.367358, 3.04418, 0.369421, 0.367358, 3.09898, 0.188332, 0.367358, 3.11776, -0.000195742, 0.367358, 3.09898, -0.188528, 0.367358, 3.04418, -0.369812, 0.367358, 2.84221, -0.690485, 0.342451, 2.69412, -0.811864, 0.342451, 2.69936, -0.81989, 0.313329, 2.70367, -0.826155, 0.282291, 2.70644, -0.830266, 0.253169, 2.70736, -0.831637, 0.227878, 2.85884, -0.707126, -0.481401, 2.9549, -0.536805, 0.367358, 2.81235, -0.660728, -1.51524, 2.95151, -0.0863352, -2.57513, 2.95644, -0.0865309, -2.55597, 2.96075, -0.0865309, -2.53682, 2.80989, -0.658379, -1.54896, 2.93427, -0.0863352, -2.63031, 2.96968, -0.071065, -2.51996, 3.00416, -0.0712608, -2.33258, 3.00508, 0.0638214, -2.33258, 2.80989, 0.658183, -1.54896, 2.96198, 0.0794832, -2.53682, 2.95767, 0.0796789, -2.55597, 2.95243, 0.0796789, -2.57513, 2.94782, 0.0796789, -2.59085, 2.9355, 0.0798748, -2.63031, 2.9706, 0.0640172, -2.51996, 2.96752, 0.0640172, -2.53643, 2.53434, 0.923845, 0.227878, 2.70736, 0.831441, -0.481401, 2.53372, 0.922279, 0.253169, 2.53187, 0.917776, 0.282291, 2.66888, 0.773884, -1.54896, 2.67073, 0.776625, -1.51524, 2.5291, 0.910728, 0.313329, 2.52541, 0.901919, 0.342451, 2.5214, 0.89213, 0.367358, 2.68827, 0.802858, 0.367358, 2.63286, 0.720047, 0.568532, 2.76432, 0.612373, 0.568532, 2.87177, 0.48101, 0.568532, 2.95182, 0.331441, 0.568532, 3.00108, 0.168951, 0.568532, 3.01801, -0.000195742, 0.568532, 3.00108, -0.169146, 0.568532, 2.95182, -0.331637, 0.568532, 2.83482, -0.683046, 0.367358, 2.68827, -0.80325, 0.367358, 2.5214, -0.892522, 0.367358, 2.52541, -0.902114, 0.342451, 2.5291, -0.910924, 0.313329, 2.53187, -0.917972, 0.282291, 2.53372, -0.922475, 0.253169, 2.53434, -0.924041, 0.227878, 2.70736, -0.831637, -0.481401, 2.87177, -0.481206, 0.568532, 2.76432, -0.612568, 0.568532, 2.67073, -0.777016, -1.51524, 2.95243, -0.0708692, -2.59046, 2.95705, -0.071065, -2.57437, 2.96198, -0.071065, -2.55559, 2.96629, -0.071065, -2.53643, 2.66888, -0.77408, -1.54896, 2.23477, -0.796202, -2.59314, 2.23477, -0.783673, -2.63223, 2.23477, -0.777995, -2.64717, 2.92842, -0.0861394, -2.64526, 2.93396, -0.0708692, -2.64602, 2.9395, -0.0708692, -2.63108, 2.97152, -0.00352389, -2.51344, 2.92965, 0.0798748, -2.64526, 2.236, 0.777995, -2.64526, 2.236, 0.783673, -2.63031, 2.9629, 0.0640172, -2.55559, 2.95798, 0.064213, -2.57437, 2.95336, 0.064213, -2.59046, 2.94073, 0.064213, -2.63108, 2.34684, 0.980619, 0.227878, 2.34653, 0.979052, 0.253169, 2.53434, 0.923845, -0.481401, 2.5094, 0.86296, -1.51524, 2.34561, 0.974354, 0.282291, 2.50786, 0.859828, -1.54896, 2.236, 0.796006, -2.59085, 2.236, 0.800705, -2.57513, 2.236, 0.805795, -2.55597, 2.236, 0.810298, -2.53682, 2.236, 0.813626, -2.52034, 2.34407, 0.966915, 0.313329, 2.34222, 0.957518, 0.342451, 2.34006, 0.947142, 0.367358, 2.32067, 0.849452, 0.568532, 2.48323, 0.800117, 0.568532, 2.62547, 0.708888, 0.593055, 2.75478, 0.602976, 0.593055, 2.86099, 0.473767, 0.593055, 2.9395, 0.326155, 0.593055, 2.98815, 0.16621, 0.593055, 3.00447, -0.000195742, 0.593055, 2.98815, -0.166406, 0.593055, 2.9395, -0.326547, 0.593055, 2.86099, -0.473962, 0.593055, 2.63286, -0.720243, 0.568532, 2.48323, -0.800313, 0.568532, 2.34006, -0.947338, 0.367358, 2.34222, -0.957713, 0.342451, 2.32067, -0.849648, 0.568532, 2.34407, -0.96711, 0.313329, 2.34561, -0.97455, 0.282291, 2.34653, -0.979248, 0.253169, 2.34684, -0.980814, 0.227878, 2.53434, -0.924041, -0.481401, 2.5094, -0.863352, -1.51524, 2.75478, -0.603171, 0.593055, 2.62547, -0.70928, 0.593055, 2.94258, -0.00332808, -2.62495, 2.50786, -0.860219, -1.54896, 2.23477, -0.813626, -2.52264, 2.23477, -0.810298, -2.53911, 2.23477, -0.805795, -2.55827, 2.23477, -0.800901, -2.57705, 2.21907, -0.806382, -2.57667, 2.21907, -0.801684, -2.59238, 2.21907, -0.788958, -2.633, 2.21907, -0.783281, -2.64832, 2.21907, -0.77545, -2.66518, 2.23477, -0.769969, -2.66403, 2.92041, -0.0861394, -2.66212, 2.93489, 0.064213, -2.64602, 2.93704, -0.00332808, -2.64028, 2.92596, -0.0706735, -2.66288, 2.92934, -0.00313234, -2.65714, 2.92688, 0.0644088, -2.66288, 2.92165, 0.0798748, -2.66212, 2.23569, 0.769969, -2.66173, 2.2203, 0.77545, -2.66288, 2.2203, 0.783281, -2.64602, 2.2203, 0.788959, -2.63108, 2.22061, 0.801684, -2.59046, 2.15164, 1, 0.227878, 2.34684, 0.980619, -0.481401, 2.15164, 0.998238, 0.253169, 2.33391, 0.91621, -1.51524, 2.33329, 0.912882, -1.54896, 2.15164, 0.993344, 0.282291, 2.22061, 0.858457, -2.29617, 2.23631, 0.847886, -2.33373, 2.23631, 0.850626, -2.31725, 2.22061, 0.806382, -2.57437, 2.22061, 0.811276, -2.55559, 2.22061, 0.815779, -2.53643, 2.22061, 0.819107, -2.51996, 2.15164, 0.985709, 0.313329, 0.121803, 1, 1, 2.31821, 0.836335, 0.593055, 2.47799, 0.787784, 0.593055, 2.61592, 0.694401, 0.621411, 2.74246, 0.590446, 0.621411, 2.84622, 0.463978, 0.621411, 2.92349, 0.319499, 0.621411, 2.97091, 0.162882, 0.621411, 2.98722, -0.000195742, 0.621411, 2.97091, -0.163078, 0.621411, 2.92349, -0.319695, 0.621411, 2.84622, -0.464174, 0.621411, 2.74246, -0.590838, 0.621411, 2.47799, -0.78798, 0.593055, 2.31821, -0.836531, 0.593055, 0.121803, -1, 1, 2.15164, -0.9861, 0.313329, 2.15164, -0.99354, 0.282291, 2.15164, -0.998434, 0.253169, 2.15164, -1, 0.227878, 2.34684, -0.980814, -0.481401, 2.33391, -0.916406, -1.51524, 2.33329, -0.913078, -1.54896, 2.61592, -0.694597, 0.621411, 2.47153, -0.771731, 0.621411, 2.21907, -0.858457, -2.29809, 2.21907, -0.855912, -2.31802, 2.23477, -0.850626, -2.31917, 2.23477, -0.847886, -2.33564, 2.21907, -0.819107, -2.52187, 2.21907, -0.815779, -2.53835, 2.21907, -0.811276, -2.55751, 2.08422, -0.806382, -2.57667, 2.15164, -0.791504, -2.62686, 2.15164, -0.786022, -2.64219, 2.15164, -0.778387, -2.65944, 2.08422, -0.77545, -2.66518, 2.21907, -0.766445, -2.68128, 2.23477, -0.760963, -2.68013, 2.91149, -0.0861394, -2.67783, 2.91703, -0.0706735, -2.67898, 2.92072, -0.00313234, -2.67361, 2.91795, 0.0644088, -2.67898, 2.91272, 0.0798748, -2.67783, 2.23569, 0.760963, -2.67783, 2.08514, 0.776038, -2.66288, 2.15287, 0.778583, -2.65714, 2.2203, 0.766445, -2.67898, 2.15287, 0.769969, -2.67361, 2.15287, 0.786413, -2.64028, 2.15287, 0.791699, -2.62495, 2.15287, 0.803837, -2.58433, 2.15164, 1, -0.481401, 2.22061, 0.860219, -2.27625, 2.15164, 0.934221, -1.51524, 2.22061, 0.855912, -2.31572, 2.08545, 0.859045, -2.29617, 0.121803, 1, -1.00024, 2.22061, 0.853367, -2.33258, 2.08545, 0.806969, -2.57437, 2.08545, 0.811864, -2.55559, 2.08545, 0.816366, -2.53643, 2.08545, 0.819695, -2.51996, 0.00665674, 1, 1, 2.49585, -0.000195742, 0.904203, 2.48908, 0.0669538, 0.904203, 2.46968, 0.131558, 0.904203, 2.51987, 0.15231, 0.901521, 2.48292, 0.221222, 0.901521, 2.43335, 0.281519, 0.901521, 2.37301, 0.331049, 0.901521, 2.40533, 0.379209, 0.893091, 2.32652, 0.421496, 0.893091, 2.34776, 0.473179, 0.880446, 2.36654, 0.518011, 0.864352, 2.3804, 0.551684, 0.846342, 2.39179, 0.579679, 0.827566, 2.27418, 0.615309, 0.827566, 2.28034, 0.64585, 0.806108, 2.2868, 0.678935, 0.780817, 2.29327, 0.711041, 0.753228, 2.29881, 0.739233, 0.726788, 2.30312, 0.760767, 0.703413, 2.30681, 0.779366, 0.679656, 2.31082, 0.79953, 0.6513, 2.31482, 0.819107, 0.621411, 2.47153, 0.771535, 0.621411, 2.46383, 0.753132, 0.6513, 2.60484, 0.67776, 0.6513, 2.7283, 0.576351, 0.6513, 2.82959, 0.452819, 0.6513, 2.90502, 0.311864, 0.6513, 2.95151, 0.158966, 0.6513, 2.96721, -0.000195742, 0.6513, 2.95151, -0.159162, 0.6513, 2.90502, -0.31206, 0.6513, 2.82959, -0.453015, 0.6513, 2.7283, -0.576547, 0.6513, 2.60484, -0.677956, 0.6513, 2.31482, -0.819303, 0.621411, 2.31082, -0.799726, 0.6513, 2.30681, -0.779757, 0.679656, 2.30312, -0.760963, 0.703413, 2.29881, -0.739624, 0.726788, 2.29327, -0.711433, 0.753228, 2.2868, -0.679131, 0.780817, 2.28034, -0.646241, 0.806108, 2.27418, -0.615505, 0.827566, 2.39179, -0.579875, 0.827566, 2.3804, -0.551879, 0.846342, 2.36654, -0.518207, 0.864352, 2.34776, -0.473375, 0.880446, 2.32652, -0.421691, 0.893091, 2.40533, -0.379601, 0.893091, 2.37301, -0.331245, 0.901521, 2.43335, -0.281715, 0.901521, 2.48292, -0.221417, 0.901521, 2.51987, -0.152506, 0.901521, 2.46968, -0.131754, 0.904203, 2.48908, -0.0671496, 0.904203, 0.00665674, -1, 1, 2.15164, -1, -0.481401, 2.15164, -0.934417, -1.51524, 2.21907, -0.860219, -2.27855, 2.46383, -0.753328, 0.6513, 0.121803, -1, -1.00024, 2.08422, -0.858457, -2.29809, 2.08422, -0.855912, -2.31802, 2.21907, -0.853367, -2.33449, 2.08422, -0.819107, -2.52187, 2.08422, -0.815779, -2.53835, 2.08422, -0.811276, -2.55751, 2.08422, -0.801684, -2.59238, 0.00665674, -1, -1.00024, 2.08422, -0.788958, -2.633, 2.08422, -0.783281, -2.64832, 2.08422, -0.766445, -2.68128, 2.21907, -0.757635, -2.69392, 2.23477, -0.752154, -2.69277, 2.49585, -0.344166, -2.90582, 2.90256, -0.0861394, -2.69086, 2.90841, -0.0706735, -2.69162, 2.91241, -0.00313234, -2.68664, 2.90933, 0.0644088, -2.69162, 2.90379, 0.0800705, -2.69086, 2.23569, 0.752154, -2.69086, 2.08545, 0.783868, -2.64602, 2.08514, 0.767032, -2.67898, 0.00665674, 1, -1.00024, 2.15287, 0.761551, -2.68664, 2.2203, 0.757831, -2.69162, 2.08545, 0.789546, -2.63108, 2.08545, 0.802271, -2.59046, 2.08545, 0.8565, -2.31572, 2.08545, 0.853955, -2.33258, 2.54234, -0.0777212, 0.901521, 2.55004, -0.000195742, 0.901521, 2.54234, 0.0775255, 0.901521, 2.5993, 0.0888802, 0.893091, 2.57344, 0.174432, 0.893091, 2.53126, 0.253328, 0.893091, 2.4743, 0.322435, 0.893091, 2.51402, 0.362177, 0.880446, 2.43643, 0.425803, 0.880446, 2.46322, 0.466327, 0.864352, 2.48354, 0.496476, 0.846342, 2.50047, 0.521535, 0.827566, 2.51771, 0.547572, 0.806108, 2.4038, 0.608457, 0.806108, 2.41673, 0.639585, 0.780817, 2.42935, 0.66993, 0.753228, 2.44013, 0.696359, 0.726788, 2.44875, 0.716523, 0.703413, 2.45583, 0.734143, 0.679656, 2.59345, 0.660728, 0.679656, 2.71383, 0.561864, 0.679656, 2.81266, 0.441464, 0.679656, 2.88624, 0.304033, 0.679656, 2.93119, 0.154855, 0.679656, 2.94658, -0.000195742, 0.679656, 2.93119, -0.155247, 0.679656, 2.88624, -0.304229, 0.679656, 2.81266, -0.44166, 0.679656, 2.71383, -0.56206, 0.679656, 2.59345, -0.660924, 0.679656, 2.45583, -0.734534, 0.679656, 2.44875, -0.716915, 0.703413, 2.44013, -0.696554, 0.726788, 2.42935, -0.670125, 0.753228, 2.41673, -0.639781, 0.780817, 2.4038, -0.608653, 0.806108, 2.50047, -0.521926, 0.827566, 2.48354, -0.496672, 0.846342, 2.46322, -0.466523, 0.864352, 2.43643, -0.425998, 0.880446, 2.4743, -0.322827, 0.893091, 2.51402, -0.362373, 0.880446, 2.53126, -0.25372, 0.893091, 2.57344, -0.174824, 0.893091, 2.5993, -0.089076, 0.893091, 2.08422, -0.853367, -2.33449, 1.43152, 0.00137043, -2.74182, 1.42659, -0.0661707, -2.73531, 1.43613, -0.0661707, -2.74604, 1.44814, -0.0663665, -2.75791, 1.45276, -0.0818324, -2.75447, 1.74709, -0.270556, -2.90582, 1.80774, -0.344166, -2.90582, 1.88133, -0.404659, -2.90582, 2.06852, -0.710258, -2.74489, 2.06852, -0.719851, -2.73416, 2.06852, -0.752154, -2.69277, 2.06852, -0.760963, -2.68013, 2.08422, -0.757635, -2.69392, 2.15164, -0.729052, -2.73224, 2.21907, -0.724354, -2.73684, 2.23477, -0.720047, -2.73377, 2.42227, -0.404659, -2.90582, 2.48692, -0.335356, -2.91464, 2.5565, -0.270556, -2.90582, 2.86069, -0.0857478, -2.74297, 2.87054, -0.0857478, -2.73186, 2.23477, -0.710258, -2.74489, 2.87485, -0.0702819, -2.73492, 2.88008, -0.00293654, -2.72994, 2.87577, 0.0648003, -2.73492, 2.87146, 0.0802662, -2.73186, 2.49585, 0.34397, -2.90582, 2.23569, 0.719851, -2.73186, 2.21999, 0.724354, -2.73492, 2.06975, 0.761551, -2.67783, 2.08514, 0.758222, -2.69162, 2.06975, 0.752741, -2.69086, 2.06944, 0.720438, -2.73186, 2.06944, 0.710846, -2.74297, 1.88133, 0.404464, -2.90582, 1.80774, 0.34397, -2.90582, 1.74709, 0.270164, -2.90582, 1.45368, 0.0841817, -2.75447, 1.44907, 0.0687157, -2.75791, 1.43706, 0.0689116, -2.74604, 1.42721, 0.0689116, -2.73531, 2.15257, 0.729248, -2.72994, 2.60792, -0.000195742, 0.893091, 2.66395, -0.000195742, 0.880446, 2.6541, 0.0998434, 0.880446, 2.62516, 0.195967, 0.880446, 2.57775, 0.284456, 0.880446, 2.5485, 0.396437, 0.864352, 2.57405, 0.422279, 0.846342, 2.5953, 0.443618, 0.827566, 2.61746, 0.46574, 0.806108, 2.53649, 0.575568, 0.780817, 2.55466, 0.60278, 0.753228, 2.57067, 0.626664, 0.726788, 2.58267, 0.644871, 0.703413, 2.70028, 0.548356, 0.703413, 2.79696, 0.430893, 0.703413, 2.86838, 0.296789, 0.703413, 2.91272, 0.151135, 0.703413, 2.9275, -0.000195742, 0.703413, 2.91272, -0.151527, 0.703413, 2.86838, -0.296985, 0.703413, 2.79696, -0.431089, 0.703413, 2.70028, -0.548747, 0.703413, 2.58267, -0.645067, 0.703413, 2.57067, -0.627056, 0.726788, 2.55466, -0.602976, 0.753228, 2.53649, -0.575763, 0.780817, 2.51771, -0.547768, 0.806108, 2.61746, -0.465936, 0.806108, 2.5953, -0.443814, 0.827566, 2.57405, -0.422475, 0.846342, 2.5485, -0.396633, 0.864352, 2.57775, -0.284652, 0.880446, 2.62516, -0.196163, 0.880446, 2.6541, -0.100039, 0.880446, 1.44352, 0.00117469, -2.7537, 1.45615, 0.00117469, -2.76405, 1.46107, -0.0663665, -2.76788, 1.70214, -0.186374, -2.90582, 1.46538, -0.0818324, -2.76481, 1.75756, -0.263508, -2.91464, 1.81667, -0.335356, -2.91464, 1.88841, -0.394283, -2.91464, 1.96538, -0.449687, -2.90582, 2.08422, -0.689702, -2.76979, 2.06852, -0.6852, -2.76673, 2.06852, -0.698121, -2.75638, 2.08422, -0.714761, -2.74795, 2.08422, -0.724354, -2.73684, 2.15164, -0.719655, -2.74335, 2.21907, -0.714761, -2.74795, 2.33791, -0.449687, -2.90582, 2.33329, -0.438136, -2.91464, 2.41519, -0.394283, -2.91464, 2.23477, -0.698121, -2.75638, 2.23477, -0.6852, -2.76673, 2.21907, -0.689702, -2.76979, 2.54604, -0.263508, -2.91464, 2.60145, -0.186374, -2.90582, 2.84037, -0.0700861, -2.76788, 2.8533, -0.0702819, -2.75753, 2.84868, -0.0857478, -2.75408, 2.8653, -0.0702819, -2.74604, 2.87085, -0.0027408, -2.74144, 2.86623, 0.0648003, -2.74604, 2.86192, 0.0802662, -2.74297, 2.5565, 0.270164, -2.90582, 2.54604, 0.263312, -2.91464, 2.48692, 0.33516, -2.91464, 2.42227, 0.404464, -2.90582, 2.23569, 0.710258, -2.74297, 2.21999, 0.714761, -2.74565, 2.15257, 0.719851, -2.74144, 2.08514, 0.724941, -2.73492, 2.08514, 0.715348, -2.74565, 2.08483, 0.703211, -2.75753, 2.06944, 0.698708, -2.75408, 2.08483, 0.69029, -2.76788, 1.96538, 0.449491, -2.90582, 1.88841, 0.394088, -2.91464, 1.81667, 0.33516, -2.91464, 1.75756, 0.263312, -2.91464, 1.70214, 0.186179, -2.90582, 1.462, 0.0687157, -2.76788, 2.70182, -0.109436, 0.864352, 2.7126, -0.000195742, 0.864352, 2.70182, 0.10924, 0.864352, 2.6698, 0.214565, 0.864352, 2.61808, 0.311472, 0.864352, 2.64825, 0.331637, 0.846342, 2.6735, 0.348473, 0.827566, 2.69936, 0.365897, 0.806108, 2.72738, 0.384495, 0.780817, 2.64117, 0.489428, 0.780817, 2.66457, 0.512725, 0.753228, 2.68489, 0.53289, 0.726788, 2.77848, 0.418755, 0.726788, 2.84837, 0.288371, 0.726788, 2.89117, 0.147024, 0.726788, 2.90564, -0.000195742, 0.726788, 2.89117, -0.14722, 0.726788, 2.84837, -0.288567, 0.726788, 2.77848, -0.418951, 0.726788, 2.68489, -0.533281, 0.726788, 2.66457, -0.512921, 0.753228, 2.64117, -0.489624, 0.780817, 2.72738, -0.384691, 0.780817, 2.69936, -0.366092, 0.806108, 2.6735, -0.348669, 0.827566, 2.64825, -0.331832, 0.846342, 2.61808, -0.311668, 0.864352, 2.6698, -0.214761, 0.864352, 1.46754, 0.00117469, -2.77209, 1.67782, -0.000195742, -2.91464, 1.47246, -0.0663665, -2.77554, 1.68675, -0.0925999, -2.91464, 1.67443, -0.0951449, -2.90582, 1.71384, -0.18148, -2.91464, 1.9703, -0.438136, -2.91464, 2.15164, -0.694988, -2.76596, 2.08422, -0.702623, -2.75945, 2.05928, -0.465153, -2.91464, 2.08422, -0.678152, -2.77746, 2.15164, -0.474158, -2.91464, 2.15164, -0.707713, -2.75523, 2.21907, -0.702623, -2.75945, 2.24431, -0.465153, -2.91464, 2.21907, -0.678152, -2.77746, 2.58975, -0.18148, -2.91464, 2.61685, -0.0925999, -2.91464, 2.62578, -0.000195742, -2.91464, 2.84129, 0.0649961, -2.76788, 2.84622, -0.002545, -2.76405, 2.85884, -0.0027408, -2.75332, 2.85422, 0.0648003, -2.75753, 2.84991, 0.080462, -2.75408, 2.60145, 0.186179, -2.90582, 2.58975, 0.181284, -2.91464, 2.41519, 0.394088, -2.91464, 2.33329, 0.43794, -2.91464, 2.33791, 0.449491, -2.90582, 2.21999, 0.689702, -2.76788, 2.21999, 0.702623, -2.75753, 2.23539, 0.697925, -2.75408, 2.15257, 0.707909, -2.75332, 2.15164, 0.473962, -2.91464, 2.05928, 0.464957, -2.91464, 1.9703, 0.43794, -2.91464, 1.71384, 0.181284, -2.91464, 1.68675, 0.0924041, -2.91464, 1.67443, 0.0949491, -2.90582, 1.47339, 0.0685199, -2.77554, 2.70367, -0.228661, 0.846342, 2.73754, -0.11668, 0.846342, 2.74893, -0.000195742, 0.846342, 2.73754, 0.116484, 0.846342, 2.70367, 0.228465, 0.846342, 2.73138, 0.240016, 0.827566, 2.76032, 0.251958, 0.806108, 2.79141, 0.264879, 0.780817, 2.75478, 0.402702, 0.753228, 2.82159, 0.277408, 0.753228, 2.86315, 0.141347, 0.753228, 2.877, -0.000195742, 0.753228, 2.86315, -0.141543, 0.753228, 2.82159, -0.277604, 0.753228, 2.75478, -0.402897, 0.753228, 2.79141, -0.265074, 0.780817, 2.76032, -0.252153, 0.806108, 2.73138, -0.240211, 0.827566, 2.61685, 0.0924041, -2.91464, 2.8299, 0.0649961, -2.77554, 2.62916, 0.0947534, -2.90582, 2.24431, 0.464957, -2.91464, 2.76709, -0.122553, 0.827566, 2.7791, -0.000195742, 0.827566, 2.76709, 0.122357, 0.827566, 2.79788, 0.128426, 0.806108, 2.83082, 0.134887, 0.780817, 2.84406, -0.000195742, 0.780817, 2.83082, -0.135278, 0.780817, 2.79788, -0.128622, 0.806108, 2.8105, -0.000195742, 0.806108)

[node name="alarm light" instance=ExtResource("1_7dlye")]
script = ExtResource("2_ovdjr")

[node name="Sketchfab_model" parent="." index="0"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sketchfab_model" index="0"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_thd1u")
}

[node name="StaticBody3D" type="StaticBody3D" parent="Sketchfab_model" index="1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sketchfab_model/StaticBody3D" index="0"]
transform = Transform3D(0.2, 0, 0, 0, -8.74228e-09, 0.2, 0, -0.2, -8.74228e-09, 4.65661e-08, 0, 0)
shape = SubResource("ConvexPolygonShape3D_4t25d")

[node name="7d1bf0332ae443b699542c9798598de2_fbx" parent="Sketchfab_model" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Bec-Alerta-Rosu" parent="Sketchfab_model/7d1bf0332ae443b699542c9798598de2_fbx/RootNode" index="0"]
transform = Transform3D(0.2, 0, 0, 0, -8.74228e-09, 0.2, 0, -0.2, -8.74228e-09, 4.65661e-08, 0, 0)

[node name="glow" type="OmniLight3D" parent="Sketchfab_model/7d1bf0332ae443b699542c9798598de2_fbx/RootNode/Bec-Alerta-Rosu/Bec-Alerta-Rosu_Lumina_0" index="0"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 5.68434e-15, 0, -5.68434e-15, 1, 2.19762, 0.0093177, -1.72343)
light_color = Color(1, 0.0588235, 0.129412, 1)
light_energy = 0.1
light_indirect_energy = 0.1
light_volumetric_fog_energy = 0.1
light_size = 1.0
omni_range = 0.15

[node name="beam1" type="SpotLight3D" parent="Sketchfab_model/7d1bf0332ae443b699542c9798598de2_fbx/RootNode/Bec-Alerta-Rosu/Bec-Alerta-Rosu_Lumina_0" index="1"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 2.11051, 0.156866, -1.6192)
rotation_order = 0
light_color = Color(1, 0.0588235, 0.129412, 1)
light_energy = 20.0
light_size = 0.3
shadow_reverse_cull_face = true
spot_range = 10.0
spot_attenuation = 0.176777
spot_angle = 23.18

[node name="beam2" type="SpotLight3D" parent="Sketchfab_model/7d1bf0332ae443b699542c9798598de2_fbx/RootNode/Bec-Alerta-Rosu/Bec-Alerta-Rosu_Lumina_0" index="2"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2.11051, 0.156866, -1.6192)
rotation_order = 0
light_color = Color(1, 0.0588235, 0.129412, 1)
light_energy = 20.0
light_size = 0.3
shadow_reverse_cull_face = true
spot_range = 10.0
spot_attenuation = 0.176777
spot_angle = 23.18
